# mmdet_tensorrt_ros

./: README.md  dependencies.repos
mmdet_tensorrt_yolox/: .clang-format  .gitignore  CMakeLists.txt  CPPLINT.cfg  package.xml
mmdet_tensorrt_yolox/docs/: README.md
mmdet_tensorrt_yolox/include/mmdet_tensorrt_yolox/: mmdet_tensorrt_yolox.hpp  mmdet_tensorrt_yolox_node.hpp
mmdet_tensorrt_yolox/launch/: mmdet_tensorrt_yolox.launch.xml  single_image_inference.launch.xml
mmdet_tensorrt_yolox/src/: mmdet_tensorrt_yolox.cpp  mmdet_tensorrt_yolox_node.cpp  yolox_single_image_inference_node.cpp
